BackEnd/RMEC-rm-service/src/main/java/com/example/demo/error/RFRRankIdNotFound.java
package com.example.demo.error;

public class RFRRankIdNotFound extends RuntimeException {
	public RFRRankIdNotFound () {
		super("RFR rank id not found");
	}
}
